--- a/index.HTML
+++ b/index.HTML
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Miguel y Ruth - ¡Nos casamos!</title>
   <link rel="stylesheet" href="css/main.css"> 
+<link rel="stylesheet" href="js/main.js"> 
   <link href="https://fonts.googleapis.com/css2?family=Marcellus&family=Playfair+Display:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
