--- a/index.html
+++ b/index.html
@@ -110,6 +110,29 @@
         </div>
     </section>
 
+    <!-- Sección Momentos -->
+<section id="momentos" class="moments-section">
+    <h1>Momentos</h1>
+    <div class="moments-container">
+        <div class="moments-slider">
+            <div class="slider-item">
+                <img src="placeholder-momento1.jpg" alt="Momento 1" class="moment-photo">
+            </div>
+            <div class="slider-item">
+                <img src="placeholder-momento2.jpg" alt="Momento 2" class="moment-photo">
+            </div>
+            <div class="slider-item">
+                <img src="placeholder-momento3.jpg" alt="Momento 3" class="moment-photo">
+            </div>
+            <div class="slider-item">
+                <img src="placeholder-momento4.jpg" alt="Momento 4" class="moment-photo">
+            </div>
+        </div>
+        <button class="slider-arrow left">&#10094;</button>
+        <button class="slider-arrow right">&#10095;</button>
+    </div>
+</section>
+
     <!-- Sección Ubicaciones -->
     <section id="ubicaciones" class="location-section">
         <h1>Ubicaciones</h1>
