--- a/index.html
+++ b/index.html
@@ -12,21 +12,22 @@
 <body>
     <!-- Header -->
     <header class="hero-header">
-        <nav class="nav-container">
-            <ul class="nav-menu">
-                <li class="nav-item"><a href="#home">Home</a></li>
-                <li class="nav-item"><a href="#pareja">Pareja</a></li>
-                <li class="nav-item"><a href="#historia">Historia de Amor</a></li>
-                <li class="nav-item"><a href="#ubicaciones">Ubicaciones</a></li>
-                <li class="nav-item"><a href="#confirmacion">Confirmación</a></li>
-                <li class="nav-item"><a href="#subir-fotos">Subir Fotos</a></li>
-            </ul>
-            <div class="hamburger-menu">
-                <span></span>
-                <span></span>
-                <span></span>
-            </div>
-        </nav>
+       <nav class="nav-container">
+    <ul class="nav-menu">
+        <li class="nav-item"><a href="#home">Home</a></li>
+        <li class="nav-item"><a href="#pareja">Pareja</a></li>
+        <li class="nav-item"><a href="#historia">Historia de Amor</a></li>
+        <li class="nav-item"><a href="#momentos">Momentos</a></li> <!-- Nueva sección -->
+        <li class="nav-item"><a href="#ubicaciones">Ubicaciones</a></li>
+        <li class="nav-item"><a href="#confirmacion">Confirmación</a></li>
+        <li class="nav-item"><a href="#subir-fotos">Subir Fotos</a></li>
+    </ul>
+    <div class="hamburger-menu">
+        <span></span>
+        <span></span>
+        <span></span>
+    </div>
+</nav>
     </header>
 
     <!-- Header Content -->
