--- a/index.html
+++ b/index.html
@@ -85,54 +85,80 @@
         </div>
     </section>
 
-    <!-- Sección Historia de Amor -->
-    <section id="historia" class="story-section">
-        <h1>Historia de Amor</h1>
-        <div class="story-content">
-            <div class="story-photo">
-                <img src="placeholder-historia1.jpg" alt="Como nos conocimos">
+<!-- Sección Historia de Amor -->
+<section id="historia" class="story-section">
+    <h1>Historia de Amor</h1>
+    <div class="story-slider-container">
+        <div class="story-slider">
+            <!-- Subsección 1: Como nos conocimos -->
+            <div class="story-slide active">
+                <div class="story-content">
+                    <div class="story-photo">
+                        <img src="placeholder-historia1.jpg" alt="Como nos conocimos">
+                    </div>
+                    <div class="story-text">
+                        <h3>Como nos conocimos</h3>
+                        <p>Descripción de cómo nos conocimos...</p>
+                    </div>
+                </div>
             </div>
-            <div class="story-text">
-                <h3>Como nos conocimos</h3>
-                <p>Descripción de cómo se conocieron...</p>
+            <!-- Subsección 2: Nuestra primera cita -->
+            <div class="story-slide">
+                <div class="story-content">
+                    <div class="story-photo">
+                        <img src="placeholder-historia2.jpg" alt="Nuestra primera cita">
+                    </div>
+                    <div class="story-text">
+                        <h3>Nuestra primera cita</h3>
+                        <p>Descripción de nuestra primera cita...</p>
+                    </div>
+                </div>
+            </div>
+            <!-- Subsección 3: Como se lo propuse -->
+            <div class="story-slide">
+                <div class="story-content">
+                    <div class="story-photo">
+                        <img src="placeholder-historia3.jpg" alt="Como se lo propuse">
+                    </div>
+                    <div class="story-text">
+                        <h3>Como se lo propuse</h3>
+                        <p>Descripción de cómo se lo propuse...</p>
+                    </div>
+                </div>
             </div>
         </div>
-        <div class="slider-container">
-            <button class="slider-arrow left">&#10094;</button>
-            <div class="slider-item">
-                <h3>Nuestra primera cita</h3>
-                <p>Descripción de la primera cita...</p>
-            </div>
-            <div class="slider-item">
-                <h3>Como se lo propuse</h3>
-                <p>Descripción de la propuesta...</p>
-            </div>
-            <button class="slider-arrow right">&#10095;</button>
+        <div class="story-arrows">
+            <button class="story-arrow left">&#10094;</button>
+            <button class="story-arrow right">&#10095;</button>
         </div>
-    </section>
-    
-  <!-- Sección Momentos -->
+    </div>
+</section>
+  
+<!-- Sección Momentos -->
 <section id="momentos" class="moments-section">
     <h1>Momentos</h1>
     <div class="moments-container">
         <div class="moments-slider">
-            <div class="slider-item">
+            <div class="moments-slide">
                 <img src="placeholder-momento1.jpg" alt="Momento 1" class="moment-photo">
             </div>
-            <div class="slider-item">
+            <div class="moments-slide">
                 <img src="placeholder-momento2.jpg" alt="Momento 2" class="moment-photo">
             </div>
-            <div class="slider-item">
+            <div class="moments-slide">
                 <img src="placeholder-momento3.jpg" alt="Momento 3" class="moment-photo">
             </div>
-            <div class="slider-item">
+            <div class="moments-slide">
                 <img src="placeholder-momento4.jpg" alt="Momento 4" class="moment-photo">
             </div>
         </div>
-        <button class="slider-arrow left">&#10094;</button>
-        <button class="slider-arrow right">&#10095;</button>
+        <div class="moments-arrows">
+            <button class="moments-arrow left">&#10094;</button>
+            <button class="moments-arrow right">&#10095;</button>
+        </div>
     </div>
 </section>
+  
     <!-- Sección Ubicaciones -->
     <section id="ubicaciones" class="location-section">
         <h1>Ubicaciones</h1>
