--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Miguel y Ruth - Boda</title>
     <link rel="stylesheet" href="css/main.css"> 
-    <link rel="stylesheet" href="js/main.js"> 
+    <script src="js/main.js" defer></script>
     <link href="https://fonts.googleapis.com/css2?family=Marcellus&family=Playfair+Display:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
 </head>
