--- a/index.html
+++ b/index.html
@@ -228,6 +228,6 @@
 </body>
 </html>
 
-  <script src="script.js" type="text/javascript"></script>
+  <script src="js/main.js" type="text/javascript"></script>
 </body>
 </html>
