--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
     <title>Miguel y Ruth - Boda</title>
     <link rel="stylesheet" href="css/main.css"> 
     <link href="https://fonts.googleapis.com/css2?family=Marcellus&family=Playfair+Display:wght@400;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <!-- Header -->
@@ -223,11 +222,8 @@
         <p>Miguel y Ruth</p>
         <img src="placeholder-footer.jpg" alt="Foto de la pareja">
     </footer>
-
-    <script src="script.js"></script>
+<script src="./js/main.js" type="text/javascript"></script>
 </body>
 </html>
 
-  <script src="js/main.js" type="text/javascript"></script>
-</body>
-</html>
+
