--- a/index.html
+++ b/index.html
@@ -169,8 +169,8 @@
             </div>
             <div class="location-item">
                 <div class="map-placeholder"></div>
-                <h3>Lugar de celebración</h3>
-                <p>Nombre del lugar</p>
+                <h3>Lugar de la fiesta</h3>
+                <p>palacio de Miraflores</p>
                 <p>05 Jul 2025 - 18:30</p>
             </div>
         </div>
