--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
             </div>
             <div class="location-item">
                 <div class="map-placeholder"></div>
-                <h3>Lugar de la fiesta</h3>
+                <h3>Lugar de la celebración</h3>
                 <p>palacio de Miraflores</p>
                 <p>05 Jul 2025 - 18:30</p>
             </div>
